--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,6 +19,8 @@ jobs:
       - name: Git Stuff
         id: git
         run: |
+          echo $(git tag)
+          echo $(git branch)
           echo "::set-env name=GIT_TAGS::$(git tag)"
           echo "::set-env name=GIT_FILES::$(git diff --name-status master)"
       - name: Check App versions
