--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,8 +19,9 @@ jobs:
       - name: Git Stuff
         id: git
         run: |
+          git fetch master
           echo $(git tag)
-          echo "Branches: $(git branch)"
+          echo "Branches: $(git branch -a)"
           echo "::set-env name=GIT_TAGS::$(git tag)"
           echo "::set-env name=GIT_FILES::$(git diff --name-status master)"
       - name: Check App versions
