--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,7 +19,7 @@ jobs:
       - name: Git Stuff
         id: git
         run: |
-          echo $(git tag)
+          git fetch --no-tags --prune --depth=1 origin +refs/heads/*:refs/remotes/origin/*
           echo "Branches: $(git branch -a)"
           echo "::set-env name=GIT_TAGS::$(git tag)"
           echo "::set-env name=GIT_FILES::$(git diff --name-status master)"
