--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,9 +20,8 @@ jobs:
         id: git
         run: |
           git fetch --no-tags --prune --depth=1 origin +refs/heads/*:refs/remotes/origin/*
-          echo "Branches: $(git branch -a)"
           echo "::set-env name=GIT_TAGS::$(git tag)"
-          echo "::set-env name=GIT_FILES::$(git diff --name-status master)"
+          echo "::set-env name=GIT_FILES::$(git diff --name-status remotes/origin/master)"
       - name: Check App versions
         run: echo "::set-output name=pr_message::$(elixir -r differ.exs -e 'Differ.cli')"
         id: differ
