--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,12 +10,9 @@ jobs:
       - name: Setup Elixir
         uses: actions/setup-elixir@v1.2.0
         with:
-          # Version range or exact version of Elixir to use
           elixir-version: 1.9
           otp-version: 22.2
           runs-on: ubuntu-latest
-      # - name: Setup Git
-      #   uses: srt32/git-actions@v0.0.3
       - name: Git Stuff
         id: git
         run: |
@@ -29,6 +26,7 @@ jobs:
         id: differ
       - name: Comment PR
         uses: marocchino/sticky-pull-request-comment@v1
+        run: echo ${{ steps.differ.outputs.message }}
         with:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           message: |
