--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,11 +16,11 @@ jobs:
       - name: Git Stuff
         id: git
         run: |
+          git fetch --no-tags --prune --depth=1 origin +refs/heads/*:refs/remotes/origin/*
           export GITTAGS=$(git tag)
           echo $GITTAGS
-          export GITFILES=$(git diff --name-status remotes/origin/master)
+          export GITFILES=$(git diff --name-status origin/master)
           echo $GITFILES
-          git fetch --no-tags --prune --depth=1 origin +refs/heads/*:refs/remotes/origin/*
           echo "::set-env name=GIT_TAGS::$GITTAGS"
           echo "::set-env name=GIT_FILES::$GITFILES"
       - name: Check App versions
