--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,6 +19,7 @@ jobs:
           git fetch --no-tags --prune --depth=1 origin +refs/heads/*:refs/remotes/origin/* 
           git fetch --depth=1 origin +refs/tags/*:refs/tags/*
       - name: Check App versions
+        shell: bash
         run: |
           message=$(elixir -r differ.exs -e 'Differ.cli')
           message="${message//'%'/'%25'}"
