--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -27,13 +27,13 @@ jobs:
         shell: bash
         id: test_new
         run: |
-          description="this is line one\n
+          export description="this is line one\n
                   this is line two\n
                   this is line three\n"
           echo $description
-          description="${description//'%'/'%25'}"
-          description="${description//$'\n'/'%0A'}"
-          description="${description//$'\r'/'%0D'}" 
+          export description="${description//'%'/'%25'}"
+          export description="${description//$'\n'/'%0A'}"
+          export description="${description//$'\r'/'%0D'}" 
           echo "::set-output name=description::$description"
       - name: Check New Lines
         run: echo ${{ steps.test_new.outputs.description }}
